fix z-index

--- a/src/pages/CarDetail.module.scss
+++ b/src/pages/CarDetail.module.scss
@@ -4,6 +4,7 @@
 }
 
 .goToBack {
+    z-index: 1;
     position: fixed;
     left: 9%;
     top: 9%;
